--- a/src/assets/styles/_misc.css
+++ b/src/assets/styles/_misc.css
@@ -15,6 +15,7 @@ h2, h3, h4 {
 }
 
 
+
 a.anchor {
   position: absolute;
   left: 0;
@@ -23,7 +24,9 @@ a.anchor {
   line-height: 1;
   display: none;
   padding-right: .5rem;
-  text-decoration: none !important;
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--anchor);
 
   &:before {
     content: '';
