--- a/src/assets/styles/_typography.css
+++ b/src/assets/styles/_typography.css
@@ -54,15 +54,6 @@ a:focus {
   outline: 2px auto var(--primary);
 }
 
-a.anchor {
-  text-decoration: none;
-  font-size: 20px;
-  color: var(--anchor);
-
-  &:hover {
-    text-decoration: underline;
-  }
-}
 
 .sc {
   font-variant-caps: small-caps;
